# logger

./: .gitignore  CMakeLists.txt  Logger.pro  README.md  log.h  logger.h  main.cpp
include/: log.h  logger.h  logpolicy.h
pkg/: logger-config.cmake.in
src/: logpolicy.cpp
